Fix listing bullet list points  getting cut off on mobile

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -54,4 +54,8 @@
   .helper-text-sm {
     @apply text-sm text-gray-600 dark:text-gray-400;
   }
+
+  input[type="password"] {
+    font-size: 0.4rem; /* Adjust the size of the dots */
+  }
 }
